--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,18 +59,10 @@
     </div>
   </div>
 
-  
-  <div class="navbar-item has-dropdown is-hoverable">
-    <a class="navbar-item">Genre</a>
-
-    <div class="navbar-dropdown bg-full-transparent">
-       <div class="navbar-item bg-transparent">Action</div>
-       <div class="navbar-item">Isekai</div>
+  <div class="navbar-item">
+    <div class="navbar-start">
+      <a class="navbar-item" href="/manga/genres">Genre</a>
     </div>
-  </div>
-
-  <div class="navbar-dropdown is-hoverable">aaa
-          <a class="navbar-item">zzz</a>
   </div>
 
   <div id="navbar-menu" data-navbar-target="menu" class="navbar-menu">
