--- a/app/views/mangas/show.html.erb
+++ b/app/views/mangas/show.html.erb
@@ -22,12 +22,12 @@
     <!-- Tombol Aksi -->
     <div class="manga-actions">
       <% if user_signed_in? %>
-  <% if current_user.bookmarked_mangas.include?(@manga) %>
-    <%= button_to "Unbookmark", manga_bookmark_path(@manga), method: :delete, class: "button" %>
-  <% else %>
-    <%= button_to "Bookmark", manga_bookmark_path(@manga), method: :post, class: "button" %>
-  <% end %>
-<% end %>
+        <% if current_user.bookmarked_mangas.include?(@manga) %>
+          <%= button_to "Unbookmark", manga_bookmark_path(@manga), method: :delete, class: "button" %>
+        <% else %>
+          <%= button_to "Bookmark", manga_bookmark_path(@manga), method: :post, class: "button" %>
+        <% end %>
+      <% end %>
 
       <% if current_user&.admin? %>
       <a href="<%= @manga.title %>/chapter/new" class="button">New</a>
@@ -59,6 +59,7 @@
   </ul>
 </div>
 
+</div>
 
 
 <style>
