--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -7,7 +7,7 @@
     <div class="bookmarks-grid">
       <% @bookmarked_mangas.each do |manga| %>
         <div class="bookmark-card">
-          <%= link_to manga_path(manga), class: "bookmark-link" do %>
+          <%= link_to manga_path(manga.title), class: "bookmark-link" do %>
             <div class="bookmark-cover-container">
               <% if manga.image_cover.present? %>
                 <img src="<%= manga.image_cover %>" alt="<%= manga.title %>" class="bookmark-cover">
@@ -17,9 +17,6 @@
             </div>
             <div class="bookmark-details">
               <h2 class="bookmark-title"><%= manga.title %></h2>
-              <div class="bookmark-actions">
-                <%= button_to "Remove Bookmark", remove_bookmark_path(manga), method: :delete, class: "btn btn-danger", data: { confirm: "Remove this manga from bookmarks?" } if defined?(remove_bookmark_path) %>
-              </div>
             </div>
           <% end %>
         </div>
