--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
     <div class="navbar-start" style="flex-grow: 1;">
       <div class="navbar-item">
         <div class="control has-icons-left">
-          <input class="input is-rounded bg-full-transparent" type="search" placeholder="Search">
+          <input id="search" class="input is-rounded bg-full-transparent" type="search" placeholder="Search">
           <span class="icon is-small is-left">
             <i class="fas fa-search"></i>
           </span>
@@ -98,7 +98,7 @@
                 <span class="icon">
                   <i class="fas fa-tools"></i>
                 </span>
-                Dashboard
+                <strong>account</strong>
               </a>
             <% end %>
 
@@ -107,7 +107,13 @@
                 <span class="icon">
                   <i class="fas fa-tools"></i>
                 </span>
-                Dashboard
+                <strong>Users Manage</strong>
+              </a>
+              <a class="navbar-item" href="<%= admin_reports_path %>">
+                <span class="icon">
+                  <i class="fas fa-chart-bar"></i>
+                </span>
+                <strong>Reports</strong>
               </a>
             <% end %>
 
